# Baba-is-You-remake

./: .gitignore  CMakeLists.txt  README.md  ~$uml.docx  ~$מגישים.docx  מגישים.docx
include/: Animation.h  Attribute.h  Baba.h  BabaWord.h  BaseDataHolder.h  BaseObject.h  BaseOperation.h  Board.h  Conjunction.h  Controller.h  DataHolder.h  DebugUtils.h  Factory.h  FileHandler.h  Macros.h  Menu.h  NoOperation.h  Noun.h  OperationMove.h  OperationRemove.h  Rule.h  Textures.h  Tile.h  Word.h  macros.h
include/AnimationAndTexturesHead/: Animation.h  Resources.h
include/BaseClassesHead/: BaseDataHolder.h  BaseObject.h
include/CollisionStrategy/: CollisionStrategy.h  CollisionStrategyDefault.h  CollisionStrategyDefeat.h  CollisionStrategyPush.h  CollisionStrategySink.h  CollisionStrategyStop.h  CollisionStrategyWin.h
include/CollisionStrategyHead/: CollisionStrategy.h  CollisionStrategyDefault.h  CollisionStrategyDefeat.h  CollisionStrategyPush.h  CollisionStrategySink.h  CollisionStrategyStop.h  CollisionStrategyWin.h  CollisionStrategyYou.h  Property.h  PropertyDefeat.h  PropertySink.h  PropertyWin.h  PropertyYou.h
include/DataStructuresHead/: Board.h  DataHolder.h
include/HandlersHead/: FileHandler.h  RuleHandling.h
include/MenuHead/: Header.h  MainMenu.h  Menu.h
include/MenusAndCommandsHead/: Header.h
include/OperationsHead/: BaseOperation.h  (+4 more)
resources/: CMakeLists.txt  map.txt
src/: Animation.cpp  Attribute.cpp  Baba.cpp  BabaWord.cpp  BaseObject.cpp  Board.cpp  CMakeLists.txt  Controller.cpp  Factory.cpp  FileHandler.cpp  Is.cpp  Menu.cpp  Noun.cpp  Resources.cpp  Rock.cpp  RockWord.cpp  Rule.cpp  Textures.cpp  Tile.cpp  WinWord.cpp  Word.cpp  YouWord.cpp  main.cpp
(+157 files in other folders)
